fixed spacing of answerconfirmation in mobile view

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -254,6 +254,13 @@ body {
     #currentQuestion{
         font-size: 10px;
     }
+
+    #instructions {
+            display: none;
+    }
+    #answerConfirmation{
+        font-size: 10px;
+    }
 }
 
 
